Updating codebase to current pre class

--- a/assets/first-choice/enter.html
+++ b/assets/first-choice/enter.html
@@ -11,7 +11,7 @@
 </head>
 <body>
    
-        <video height="800px" id="doorOpen" src="../residentEvilDoorOpen.mp4" autoplay></video>
+        <video height="800px" id="doorOpen" src="../video-files/residentEvilDoorOpen.mp4" autoplay></video>
     
         <script src="./actions.js"></script>
 </body>
