--- a/choose-your-own.html
+++ b/choose-your-own.html
@@ -8,15 +8,15 @@
     <link rel="shortcut icon" type="image/x-icon" href="./assets/Hox100transparent.gif"/>
     <title>Choose your own adventure</title>
     <link rel="stylesheet" href="./assets/stylesheet.css">
-    <link rel="stylesheet" href="./assets/button.css">
-    <script src="./assets/video-pages/actions.js"></script>
+    <link rel="stylesheet" href="./assets/first-choice/button.css">
+    <script src="./assets/first-choice/actions.js"></script>
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
-    <audio id="playButton" src="./assets/halloweenTrap.mp3" controls autoplay ></audio>
+    <audio id="playButton" src="./assets/audio-files/halloweenTrap.mp3" autoplay controls></audio>
 
     <p id="introTitle">ESCAPE IT!</p>
     <p id="subtext">A conditional journey</p>
