updating code with finishing screen

--- a/assets/first-choice/enter.html
+++ b/assets/first-choice/enter.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../choose-your-own.css">
     <title>Document</title>
-    <link rel="stylesheet" href="../../choose-your-own.css">
-   
+    <script src="./enter.js"></script>
 </head>
 <body>
-   
+  
         <video height="800px" id="doorOpen" src="../video-files/residentEvilDoorOpen.mp4" autoplay></video>
-    
-        <script src="./actions.js"></script>
+        <script src="../../choose-your-own.js"></script>  
+        
 </body>
 </html>
