--- a/assets/second-choice/second-choice.html
+++ b/assets/second-choice/second-choice.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../first-choice/firstChoiceHover.css">
     <link rel="stylesheet" href="../first-choice/text-animation/text-animation.css">
     <script src="../first-choice/text-animation/text-animation.js"></script>
-    <script src="../first-choice/actions.js"></script>
+    <script src="../../choose-your-own.js"></script>
 </head>
 <body>
     <div id="choose">Choose an Item</div>
@@ -31,7 +31,7 @@
    
    <!-- Image 3 -->
    <div class="content_img">
-    <img src='https://lh3.googleusercontent.com/proxy/P1EbJHTB0Fd7hIx2T6l5A50HPdMM869BQZIMSmyQFLBJz3vmH52hv8PNe1RyG-XiJVOYjaL8BuTd0Q_Yt_jA6o9xcGHllp4HZw' width='100%' height='100%' onclick="clickGymShorts()">
+    <img src='https://64.media.tumblr.com/206c7a3300adfdee713eddb447cbf757/tumblr_pqp0n64H9V1wv7sma_1280.png' width='100%' height='100%' onclick="clickGymShorts()">
     <div>Gym Shorts</div> 
    </div>
 
