--- a/assets/final-screen/final-screen.html
+++ b/assets/final-screen/final-screen.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./firstChoiceHover.css">
     <link rel="stylesheet" href="../first-choice/text-animation/text-animation.css">
     <script src="../first-choice/text-animation/text-animation.js"></script>
-    <script src="../../choose-your-own.js"></script>
+    
     <link rel="stylesheet" href="../starwarsintro.css">
  
 </head>
@@ -44,5 +44,14 @@
     </div>
   </div>
 </div>
+<script>
+  console.log(document.getElementById("star-wars-ending-scroll-text").innerHTML);
+  console.log(window.localStorage.getItem("choiceOne"));
+  console.log(window.localStorage.getItem("choiceTwo"));
+  console.log(window.localStorage.getItem("choiceThree"));
+  console.log(window.localStorage.getItem("choiceFour"));
+  
+</script>
+<script src="../../choose-your-own.js"></script>
 </body>
 </html>
