--- a/assets/first-choice/firstChoice.html
+++ b/assets/first-choice/firstChoice.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./firstChoiceHover.css">
     <link rel="stylesheet" href="./text-animation/text-animation.css">
     <script src="./text-animation/text-animation.js"></script>
-    <script src="../../choose-your-own.js"></script>
+    <script src="../frontEnd.js"></script>
  
 </head>
 <body>
