--- a/assets/second-choice/second-choice.html
+++ b/assets/second-choice/second-choice.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../first-choice/firstChoiceHover.css">
     <link rel="stylesheet" href="../first-choice/text-animation/text-animation.css">
     <script src="../first-choice/text-animation/text-animation.js"></script>
-    <script src="../../choose-your-own.js"></script>
+    <script src="../frontEnd.js"></script>
 </head>
 <body>
     <div id="choose">Choose an Item</div>
@@ -41,5 +41,6 @@
         <div>Bread & Butter</div> 
        </div>
     </div>  
+ 
 </body>
 </html>
