--- a/assets/forth-choice/forth-choice.html
+++ b/assets/forth-choice/forth-choice.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../first-choice/firstChoiceHover.css">
     <link rel="stylesheet" href="../first-choice/text-animation/text-animation.css">
     <script src="../first-choice/text-animation/text-animation.js"></script>
-    <script src="../../choose-your-own.js"></script>
+    <script src="../frontEnd.js"></script>
     <title>Document</title>
 </head>
 <body>
