--- a/assets/third-choice/third-choice.html
+++ b/assets/third-choice/third-choice.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../choose-your-own.css">
     <link rel="stylesheet" href="../first-choice/firstChoiceHover.css">
     <link rel="stylesheet" href="../first-choice/text-animation/text-animation.css">
-    <script src="../../choose-your-own.js"></script>
+    <script src="../frontEnd.js"></script>
     <script src="../first-choice/text-animation/text-animation.js"></script>
     <title>Document</title>
 </head>
