--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Choose your own adventure</title>
     <link rel="stylesheet" href="./assets/stylesheet.css">
     <link rel="stylesheet" href="./assets/first-choice/button.css">
-    <script src="./choose-your-own.js"></script>
+    <script src="./assets/frontEnd.js"></script>
+    <script src="./assets/first-choice/enter.js"></script>
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <!-- JavaScript Bundle with Popper -->
